[package]
name = "polycloud"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv = "0.11.1"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = [
    "asm",
    "batch",
    "digest",
    "hazmat",
    "legacy_compatibility",
    "pem",
    "pkcs8",
    "rand_core",
    "serde",
    "signature",
] }
futures = "0.3.31"
hazmat = "0.1.0"
pkcs5 = "0.7.1"
rand = "0.9.1"
rsa = { version = "0.9.8", features = ["getrandom"] }
serde = "1.0.219"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full", "net"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
x25519-dalek = "2.0.1"

[[bin]]
name = "symmetric"
path = "src/symmetric.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "dh"
path = "src/key_exchange.rs"

[[bin]]
name = "sign"
path = "src/signature.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "asymmetric"
path = "src/asymmetric.rs"
